--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <p id="rgbDisplay">RGB(???, ???, ???)</p>
 
         <div id="colorGrid" class="color-grid">
-            <div class="color-box"></div>
-            <div class="color-box"></div>
-            <div class="color-box"></div>
-            <div class="color-box"></div>
-            <div class="color-box"></div>
-            <div class="color-box"></div>
+            <div class="color-box">1</div>
+            <div class="color-box">2</div>
+            <div class="color-box">3</div>
+            <div class="color-box">4</div>
+            <div class="color-box">5</div>
+            <div class="color-box">6</div>
         </div>
 
         <p id="message"></p>
